--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -12,7 +12,71 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
+            <TextView
+                android:id="@+id/toRNTestOne1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_marginTop="10dp"
+                android:text="跳转RNTestOne,版本V1.0.1更新可用"/>
+
+            <TextView
+                android:id="@+id/toRNTestOne2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:text="跳转RNTestOne,版本V1.0.2,当前最新版本可用"/>
+            <TextView
+                android:id="@+id/toRNTestOne3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:text="跳转RNTestOne,版本V1.0.3,最新版本未发布，无法使用"/>
+
+            <TextView
+                android:id="@+id/toRNTestTwo"
+                android:padding="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="跳转RNTestTwo有图片,版本V1.0.1更新可用"/>
+            <TextView
+                android:id="@+id/toRNTestTwo2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_marginTop="10dp"
+                android:text="跳转RNTestTwo有图片,版本V1.0.2,当前最新版本可用"/>
+            <TextView
+                android:id="@+id/toRNTestTwo3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_marginTop="10dp"
+                android:text="跳转RNTestTwo有图片,版本V1.0.3,最新版本未发布，无法使用"/>
+
+            <TextView
+                android:id="@+id/toRNTestThree"
+                android:layout_marginTop="10dp"
+                android:padding="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:text="跳转RNTestThree"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="visible">
             <TextView
                 android:id="@+id/toRN"
                 android:layout_width="wrap_content"
@@ -52,7 +116,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
             <TextView
                 android:id="@+id/sendmsg"
                 android:layout_width="wrap_content"
